  Deserializer merged with Serializer
  RemoteEntityConnection code cleanup, synchronized with EntityConnection
  FrameworkMessages_is_IS.properties encoding fixed
  DateUtils.floorTime() added
  EntityUtil.getRandomDate() now returns a random date within the last year instead of a date based on current time
  EntityUiUtil.createEntityLookupFieldPanel() added
  EntityUtil.getPropertyValues() no longer returns a generified collection
  PropertySummaryModel.PropertyValueProvider.getValues() no longer returns a generified collection
  EntityUtil, minor refactoring
  TableSelectionModel refactored out of FilteredTableModel
  DefaultTableSelectionModel added
  DefaultColumnSearchModel.include(Object) now returns true if model is not enabled
  AbstractFilteredTableModel.getSearchValueAt() second parameter changed to TableColumn, some minor refactoring
  EntityUtil, testing related methods moved to EntityTestUnit
  EntityTablePanel.getInputProvider() improved, uses new TextInputProvider constructor with max length parameter
  EditModelValue replaced by factory class EditModelValues
  EntityUiUtil, javadoc improvements
  ControlProvider, javadoc improvements
  EntityPanelProvider, javadoc improved
  UiUtil, javadoc improved
  ExceptionDialog, javadoc improved
  DoubleField, javadoc improved
  LoginPanel, javadoc improved
  Configuration, javadoc improved, renamed a few properties, added constants for default numerical values
  Some javadoc improvements
  EntityEditPanel.createEntityFieldPanel() removed
  EntityUiUtil.createEntityFieldPanel() removed
  DateUtilTest, added a single test
  ExceptionDialog.close() re-added
  UiUtil.getDateFromUser() improved
  EmployeeEditPanel in empdept demo uses DateInputPanel with button
  Control.toString() implemented, returns name
  Item, single parameter constructor added
  ValueListInputProviderTest added
  TristateCheckBoxTest added
  EntityUiUtilTest added
  UiUtil.createFrame() removed
  Removed a few magic numbers